bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -2,6 +2,10 @@
     white-space: pre-line !important;
 }
 
+.set-role-shell {
+    width: unset !important;
+}
+
 .tab-wrapper {
     margin: 15px 0;
     width: 99%;
@@ -343,6 +347,7 @@ mat-toolbar {
     padding: 15px;
     border-radius: 4px;
     margin: 10px 0;
+    width: 300px;
 }
 
 .vitals-shell {
