--- a/src/styles.css
+++ b/src/styles.css
@@ -305,3 +305,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   float: left;
   width: unset !important;
 }
+
+.mat-checkbox-layout { white-space: normal !important; }
